<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, KLoungeActivity!</string>
    <string name="app_name">K-Rounge for CSE</string>
    <string name="app_name_ko">K-라운지</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">로그아웃</string>
    <string name="title_activity_view_group">ViewGroup</string>
    <string name="title_activity_klounge_msg">KLoungeMsg</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="input_reply_text">전송</string>
    <string name="hint_reply_text">댓글달기</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_klounge_group_member">KLoungeGroupMember</string>
    <string name="send_message">글쓰기</string>
    <string name="title_activity_wirte_message">WirteMessage</string>
    <string name="group_all">공개라운지</string>
    <string name="go_message">게시</string>
    <string name="title_activity_my_lounge">MyLounge</string>
    <string name="title_activity_personal_lounge">PersonalLounge</string>
    <string name="Delete">삭제</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_popup_message">PopupMessage</string>
    <string name="view">보기</string>
    <string name="close">닫기</string>
    <string name="blank_5">"     "</string>
    <string name="hint_group_search">그룹명 검색</string>
    <string name="tab_name_group">그룹</string>
    <string name="tab_name_klounge">그룹SNS</string>
    <string name="tab_name_mylounge">내라운지</string>
    <string name="tab_name_more">더보기</string>
    <string name="mov_file">영상</string>
    <string name="attach_file">파일</string>
    <string name="pic_file">사진</string>
    <string name="send_button_text">전송</string>
    <string name="attach_pic">첨부사진</string>
    <string name="hint_message">글을 입력해 주세요</string>
    <string name="sorry_text">죄송합니다. 네트워크 상의 문제가 발생하였습니다.</string>
    <string name="text_confirm">확인</string>
    <string name="title_move_img">move</string>
    <string name="msg_title">k-Rounge</string>
    <string name="msg_contents">목록을 가져오고 있습니다 <![CDATA[...]]></string>
    <string name="sorry_empty_list">조회된 글 목록이 없습니다.</string>
    <string name="sorry_empty_mem_list">조회된 멤버 목록이 없습니다.</string>
    <string name="text_version_num">V 0.1.1</string>
    <string name="text_version">현재버전</string>
    <string name="copyright">Copyright@KTECH.Co</string>
    <string name="refresh">새로고침</string>
    <string name="text_status_inform">상태확인</string>
    <string name="text_go_download">받은파일 보러가기</string>
    <string name="text_start_download">다운로드</string>
    <string name="text_cancel">취소</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="title_activity_image_view">ImageView</string>
    <string name="action_settings">Settings</string>
    <!-- COLOR -->
    <color name="textcolor_disable">#FF818181</color>
    <color name="textcolor_enable">#FFFFFFFF</color>
    <color name="contentBG">#FFFFFFFF</color>
    <color name="tabsBG">#FFCFDDE8</color>
    <color name="basic_background">#AACFDDE8</color>
    <color name="bottomContentBG">#FFdeedf5</color>
    <color name="tab_background">#FF4484B7</color>
    <color name="thickString">#FF000000</color>
    <color name="lightString">#FF757575</color>
    <color name="brightString">#FFFFFFFF</color>
    <color name="bodyString">#FF777777</color>
    <color name="link_color">#FF14148C</color>
    <color name="visited_link_color">#FF8C008C</color>
    <color name="inactive_group">#FF767676</color>
    <color name="color_active_group">#FF1e83ce</color>
    <color name="text_color_label">#FF0064FF</color>
    <color name="text_color_hint">#AA757575</color>
    <color name="titlebackgroundcolor">#FF4484B7</color>
    <color name="bar_softkeyboard_attach">#DD302b24</color>
    <color name="reply_bottom_bar">#33302b24</color>
    <color name="hint_login">#55FFFFFF</color>
    <color name="btn_disabled">#FFCDCDCD</color>
    <color name="grid_state_pressed">#BB7dbcd3</color>
    <color name="grid_state_focused">#777dbcd3</color>

</resources>