<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moretab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tabsBG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MoreTab" >

    <ImageView
        android:id="@+id/tabmore_logo"
        android:src="@drawable/icon_klounge_big"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp" />
    <TextView 
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:textColor="@color/thickString"
        android:layout_below="@+id/tabmore_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/text_version"
        android:textSize="18sp" />

    <TextView 
        android:id="@+id/numtext_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:textColor="@color/thickString"
        android:text="@string/text_version_num"
        android:textSize="22sp" 
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_version"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/thickString"
        android:text="@string/copyright"
        android:textSize="12sp" 
        android:layout_centerHorizontal="true"/>    

</RelativeLayout>